--- a/prontocloud/css/style.css
+++ b/prontocloud/css/style.css
@@ -1,44 +1,137 @@
 html{
-    font-size: 62.5%;
+    font-size: 72.5%;
+    
 }
 body{
-background-color: #93a5f8;
+background-color: #becaff;
+font-family: 'Open Sans', sans-serif;
+
+
+}.local{
+   
+    background-color:#becaff;;
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-left: 13%;
+    margin-bottom: 10px;
+    margin-top: 0px;
+    padding: 0px;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.199);
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
 
 }
-.main-container{
-    background-color: white;
-    max-width: 1298px;
-    margin: 0px auto;
-    padding: 20px;
-}
 header{
-font-size: 1.5rem;
+    background-color: #88c6f0;
+    font-size: 1.5rem;
+    padding: 50px;
+    margin-top: 0px;
 }
-h1{
+
+ header img{
+    margin-top: 5px;
+    background-color: #3b1dfaa8;
+    display: block;
+    float: left;
+    margin-top: -27px;
+}
+header img:hover{
+    background-color: #ecebf3;
+     border-radius:2500px 2500px 2px 2500px;
+} 
+.mage{
+    width: 100%;
+}
+h1{ 
+    text-indent: 10%;
     font-size: 2.4rem;
     color: #254159;
+    margin-bottom: 20px;
+    padding: 22px;
+
 }
-h2{
+h2{ padding: 22px;
     font-size: 2rem;
     color: #254159;
+    
+    
 }
 h3{
+    padding: 22px;
     font-size: 1.8rem;
     color: #254159;
+    padding: 22px;
 }
 h4{
     font-size: 1.6rem;
     color: #31587a;
+    padding: 22px;
 }
-section{
+p { 
+    margin: 3%;
+    font-size: 16px;
+    line-height: 1.4;
+    text-indent: 10px;
+}
+
+   section nav{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0rem;
+    padding-top:10%;
+    display: block;
+    float: left;
+    width: 40%;
+    padding: 10px;
+  
+
 
 }
-section nav{
+ul{ 
+    font-size: 12px;
+    display: flex;
+    margin-inline: 35%;
+    width: 100%;
+}
+li{
+    margin-inline: 30px;
+}
+ol{
+    font-size: 16px;
+    font-weight: bold;
+    line-height: 1.5;
+
+} ol li {
+    margin-left:10%;
 
 }
-section{
-
+ naV a{   
+    color: black;
+    text-decoration: none;
 }
-footer{
-
+ nav a:hover{
+    color: #1e09dd; 
+    text-decoration: underline;
 }
+
+section article{
+    display: block;
+    float: left;
+    width:70% ;
+   
+}
+footer p {
+    font-size: 1.4rem;
+    background-color: #7b6be1;
+     text-align: center;
+    color: #ffffff;
+    display: block;
+    float: left; 
+    width: 100%;
+    padding: 01px;
+}
+footer small{
+    color: black;
+    font-size:80% ;
+} 
