--- a/prontocloud/css/style.css
+++ b/prontocloud/css/style.css
@@ -118,7 +118,7 @@ ol{
 section article{
     display: block;
     float: left;
-    width:70% ;
+    width:80% ;
    
 }
 footer p {
@@ -131,7 +131,25 @@ footer p {
     width: 100%;
     padding: 01px;
 }
+.centr{
+    text-align: center;
+    text-indent: 10%;
+    font-size: 2.4rem;
+    color: #254159;
+    margin-bottom: 20px;
+    padding: 22px;
+}
+.cognito  {
+    display: block;
+     margin-left: 50%;
+}
+.cog-page cog-wrapper cog-transition-ltr
+
+
+
 footer small{
     color: black;
     font-size:80% ;
 } 
+
+
