--- a/prontocloud/css/style.css
+++ b/prontocloud/css/style.css
@@ -74,6 +74,10 @@ p {
     line-height: 1.4;
     text-indent: 10px;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
 
    section nav{
 
@@ -121,35 +125,35 @@ section article{
     width:80% ;
    
 }
-footer p {
-    font-size: 1.4rem;
+footer {
+    font-size: 1rem;
     background-color: #7b6be1;
      text-align: center;
     color: #ffffff;
     display: block;
     float: left; 
     width: 100%;
-    padding: 01px;
+    padding: 15px;
 }
 .centr{
     text-align: center;
     text-indent: 10%;
-    font-size: 2.4rem;
+    font-size: 1.4rem;
     color: #254159;
     margin-bottom: 20px;
     padding: 22px;
 }
 .cognito  {
-    display: block;
-     margin-left: 50%;
+   height: 520px !important;
+   overflow:hidden !important;
 }
 .cog-page cog-wrapper cog-transition-ltr
 
 
 
-footer small{
+ footer small{
     color: black;
-    font-size:80% ;
+    font-size:80%;
 } 
 
 
